--- a/views/partials/breadcrumb.ejs
+++ b/views/partials/breadcrumb.ejs
@@ -1,6 +1,11 @@
 <!-- views/partials/breadcrumb.ejs -->
-<p class="breadcrumb">
-  <a href="/">Home</a> &gt; 
-  <a href="/menu">Menu</a> &gt; 
-  <span><%= category %></span>
-</p>
+<% const onHome = typeof isHome !== 'undefined' ? isHome : false; %>
+
+<% if (!onHome) { %>
+  <p class="breadcrumb">
+    <a href="/">Home</a>
+    <% if (category && category.toLowerCase() !== 'home') { %>
+      &gt; <span><%= category %></span>
+    <% } %>
+  </p>
+<% } %>
