--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@ body {
   background-image: url( '/images/Bistro Image.jpg');
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat:repeat-y;
   margin: 0;
   padding: 0;
 
@@ -66,6 +66,7 @@ body {
   font-size: 1rem;
   font-weight: 500;
   color: #444;
+  margin-top: 5px ;
   margin-bottom: 1.5em;
   padding: 0.5em 1em;
   background-color: rgba(255, 255, 255, 0.6);
@@ -140,8 +141,9 @@ body {
 .full-menu h3,
 .full-menu p {
   margin: 0 0 1rem;
-  line-height: 0.5;
+  line-height: 0.1;
 }
+
 
 /*--------------Only for category.ejs shrink to content-------------*/
 #category-page {
