--- a/views/category.ejs
+++ b/views/category.ejs
@@ -11,7 +11,7 @@
     <div id="category-page">
       <div class="content-box">
         <%- include('./partials/nav') %> <%- include('./partials/breadcrumb', {
-        category }) %>
+        category, isHome: false }) %>
 
         <h1><%= category %></h1>
 
